--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.0",
     "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -134,8 +134,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-plugin-react": "^7.15.1",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-react": "^7.14.3",
     "redux-devtools": "^3.5.0",
     "redux-observable": "^1.2.0"
   }
