--- a/package.json
+++ b/package.json
@@ -136,8 +136,24 @@
   "devDependencies": {
     "eslint": "6.1.0",
     "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
+    "husky": ">=1",
+    "lint-staged": ">=8",
+    "prettier": "1.18.2",
     "redux-devtools": "^3.5.0",
     "redux-observable": "^1.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
