--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "webpack": "4.40.2",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "redux-observable": "^1.2.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -142,8 +143,7 @@
     "husky": ">=1",
     "lint-staged": ">=8",
     "prettier": "1.18.2",
-    "redux-devtools": "^3.5.0",
-    "redux-observable": "^1.2.0"
+    "redux-devtools": "^3.5.0"
   },
   "husky": {
     "hooks": {
