--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,13 @@
         "es6": true,
         "node": true
     },
-    "extends": ["airbnb-base", "prettier", "plugin:prettier/recommended"],
+    "extends": [
+        "airbnb-base",
+        "prettier",
+        "plugin:prettier/recommended",
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
