implemented style Hook for App component

--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "eslintIgnore": [
+    "src/serviceWorker.js"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
