--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-observable": "^1.2.0",
     "resolve": "1.12.0",
