--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
     "redux-observable": "^1.2.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
