--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-app-polyfill": "^1.0.3",
@@ -154,7 +155,6 @@
     "eslint-plugin-react": "^7.14.3",
     "husky": ">=1",
     "lint-staged": ">=8",
-    "prettier": "1.18.2",
     "redux-devtools": "^3.5.0"
   },
   "husky": {
