--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.5.0",
     "@svgr/webpack": "4.3.2",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
-    "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
@@ -20,12 +17,6 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "3.0.0",
-    "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -44,7 +35,6 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-app-polyfill": "^1.0.3",
@@ -73,15 +63,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "lint": "eslint"
+    "test": "node scripts/test.js"
+
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "eslintIgnore": [
-    "src/serviceWorker.js"
-  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -148,24 +132,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "6.1.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.14.3",
     "husky": ">=1",
-    "lint-staged": ">=8",
     "redux-devtools": "^3.5.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
   }
 }
