--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
-
   },
   "browserslist": {
     "production": [
@@ -132,6 +131,12 @@
     ]
   },
   "devDependencies": {
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "husky": ">=1",
     "redux-devtools": "^3.5.0"
   }
