--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-app-polyfill": "^1.0.3",
@@ -63,7 +65,10 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "lint": "eslint src/**/*.js && eslint config/**/*.js",
+    "pretty-quick": "pretty-quick",
+    "pretty": "npx prettier --config .prettierrc --write \\\"{,!(excluded|directories)/**/}*.{ts,js,scss}\\\""
   },
   "browserslist": {
     "production": [
@@ -137,7 +142,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": ">=1",
+    "husky": "^3.0.8",
+    "lint-staged": "^9.4.1",
     "redux-devtools": "^3.5.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
