--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,51 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true,
-        "node": true
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "extends": [
+    "airbnb",
+    "airbnb/hooks",
+    "standard",
+    "standard-react",
+    "prettier",
+    "prettier/flowtype",
+    "prettier/react"
+  ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": ["airbnb", "airbnb/hooks"],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "import/prefer-default-export": "off",
-        "arrow-parens": "off",
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
-    }
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "plugins": ["babel", "react", "promise", "prettier"],
+  "rules": {
+    "import/prefer-default-export": "off",
+    "arrow-parens": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "no-undef": 0,
+    "import/no-named-as-default": 0,
+    "no-param-reassign": 0,
+    "no-unused-expressions": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0,
+    "import/extensions": 0,
+    "react/jsx-closing-bracket-location": 1,
+    "react/forbid-prop-types": 0,
+    "no-shadow": 0,
+    "react/no-danger": 0,
+    "react/require-default-props": 0,
+    "import/no-webpack-loader-syntax": 0,
+    "react/jsx-space-before-closing": 0,
+    "jsx-a11y/href-no-hash": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "no-console": "off",
+    "linebreak-style": "off"
+  }
 }
