--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,6 @@
     "node": true
   },
   "extends": [
-    "eslint:recommended",
     "airbnb",
     "airbnb/hooks",
     "standard",
@@ -27,6 +26,7 @@
   },
   "plugins": ["babel", "react", "promise", "prettier"],
   "rules": {
+    "prettier/prettier": "error",
     "import/prefer-default-export": "off",
     "arrow-parens": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
