--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "styled-css-grid": "^1.2.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "typeface-roboto": "0.0.75",
