added app layout and refactored routing

--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "styled-components": "^4.4.0",
     "styled-css-grid": "^1.2.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "typeface-roboto": "0.0.75",
     "url-loader": "2.1.0",
+    "uuid": "^3.3.3",
     "webpack": "4.40.2",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
