--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.5.0",
     "@svgr/webpack": "4.3.2",
+    "axios": "^0.19.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
