--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.6.0",
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
-    "@material-ui/styles": "^4.5.0",
+    "@material-ui/core": "4.5.0",
+    "@material-ui/icons": "4.4.3",
+    "@material-ui/styles": "4.5.0",
     "@svgr/webpack": "4.3.2",
-    "axios": "^0.19.0",
-    "babel-jest": "^24.9.0",
+    "axios": "0.19.0",
+    "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-react-app": "^9.0.2",
-    "camelcase": "^5.2.0",
+    "babel-plugin-named-asset-import": "0.3.4",
+    "babel-preset-react-app": "9.0.2",
+    "camelcase": "5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
@@ -22,12 +22,12 @@
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
+    "is-wsl": "1.1.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
-    "lodash-es": "^4.17.15",
+    "lodash-es": "4.17.15",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -36,31 +36,31 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.1",
-    "react-app-polyfill": "^1.0.3",
-    "react-dev-utils": "^9.0.4",
-    "react-dom": "^16.10.1",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
-    "redux-actions": "^2.6.5",
-    "redux-observable": "^1.2.0",
+    "prettier": "1.18.2",
+    "pretty-quick": "1.11.1",
+    "prop-types": "15.7.2",
+    "react": "16.10.1",
+    "react-app-polyfill": "1.0.3",
+    "react-dev-utils": "9.0.4",
+    "react-dom": "16.10.1",
+    "react-redux": "7.1.1",
+    "react-router-dom": "5.1.2",
+    "redux": "4.0.4",
+    "redux-actions": "2.6.5",
+    "redux-observable": "1.2.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
-    "rxjs": "^6.5.3",
+    "rxjs": "6.5.3",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "styled-components": "^4.4.0",
-    "styled-css-grid": "^1.2.1",
+    "styled-components": "4.4.0",
+    "styled-css-grid": "1.2.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "typeface-roboto": "0.0.75",
     "url-loader": "2.1.0",
-    "uuid": "^3.3.3",
+    "uuid": "3.3.3",
     "webpack": "4.40.2",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
@@ -142,22 +142,22 @@
   "devDependencies": {
     "eslint": "6.1.0",
     "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^4.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^3.0.8",
-    "lint-staged": "^9.4.1",
-    "redux-devtools": "^3.5.0"
+    "eslint-config-prettier": "6.3.0",
+    "eslint-config-standard": "14.1.0",
+    "eslint-config-standard-react": "9.2.0",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-flowtype": "4.3.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-node": "10.0.0",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "eslint-plugin-standard": "4.0.1",
+    "husky": "3.0.8",
+    "lint-staged": "9.4.1",
+    "redux-devtools": "3.5.0"
   },
   "husky": {
     "hooks": {
