--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-app-polyfill": "1.0.3",
     "react-dev-utils": "9.0.4",
     "react-dom": "16.10.1",
+    "react-masonry-component": "^6.2.1",
     "react-redux": "7.1.1",
     "react-router-dom": "5.1.2",
     "redux": "4.0.4",
