enchanting todo page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
     "jsx-a11y/href-no-hash": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "no-console": "off",
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "react/jsx-props-no-spreading": 0
   }
 }
